// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SignUp render 1`] = `
<div>
  <div
    class="layoutExperimental"
  >
    <div
      class="imageColumn"
      style="background: url(test-file-stub) repeat;"
    >
      <img
        alt=""
        aria-hidden="true"
        class="foreground"
        src="test-file-stub"
      />
      <div
        class="container"
      >
        <div>
          <div
            class="branding"
          >
            <img
              alt=""
              aria-hidden="true"
              src="test-file-stub"
            />
          </div>
          <div
            class="title"
          >
            The Modern Software Delivery Platform
          </div>
          <div
            class="tagline"
            style="color: rgb(2, 120, 213);"
          >
            Loved by Developers, Trusted by Businesses
          </div>
          <div
            class="valueProp"
          >
            Harness is the industry's first Software Delivery Platform to use AI to simplify your DevOps processes - CI, CD, Feature Flags, Cloud Costs, and much more.
          </div>
          <div
            class="hrmodule"
            style="background: rgb(2, 120, 213);"
          />
        </div>
        <div
          class="callout"
        >
          <p
            class="cotext"
          >
            Trusted by Developers, DevOps, DevSecOps, Finance and others, across world's leading digital businesses.
          </p>
          <img
            alt=""
            aria-hidden="true"
            src="test-file-stub"
          />
        </div>
      </div>
    </div>
    <div
      class="cardColumn"
    >
      <div
        class="card"
      >
        <div
          class="signup experimentSignup"
        >
          <div
            class="title"
          >
            Sign up
          </div>
          <div
            class="subtitle"
          >
            Get started for free. No Credit card required.
          </div>
          <div
            class="oAuthForm"
          >
            <button
              class="oAuthbutton oauthgoogle"
            >
              <div
                class="logoContainer"
              >
                <img
                  class="buttonImage buttonImage"
                  src="test-file-stub"
                />
              </div>
              <div
                class="buttonText withIcon"
              >
                Continue with Google
              </div>
            </button>
            <button
              class="oAuthbutton oauthgoogle"
            >
              <div
                class="logoContainer"
              >
                <img
                  class="buttonImage buttonImage"
                  src="test-file-stub"
                />
              </div>
              <div
                class="buttonText withIcon"
              >
                Continue with Github
              </div>
            </button>
            <div
              class="oAuthSection"
            >
              <div>
                <div
                  class="layout-horizontal spacing-auto fullButtons oAuthIcons oAuthForm sectionWidth"
                >
                  <a
                    class="iconContainer oauthbutton"
                    href="http://localhost/gateway/api/users/oauth2Redirect?provider=bitbucket&action=signup&isNG=true"
                  >
                    <img
                      class="icon"
                      height="24"
                      src="test-file-stub"
                      width="24"
                    />
                    
                  </a>
                  <a
                    class="iconContainer oauthbutton"
                    href="http://localhost/gateway/api/users/oauth2Redirect?provider=gitlab&action=signup&isNG=true"
                  >
                    <img
                      class="icon"
                      height="24"
                      src="test-file-stub"
                      width="24"
                    />
                    
                  </a>
                  <a
                    class="iconContainer oauthbutton"
                    href="http://localhost/gateway/api/users/oauth2Redirect?provider=linkedin&action=signup&isNG=true"
                  >
                    <img
                      class="icon"
                      height="24"
                      src="test-file-stub"
                      width="24"
                    />
                    
                  </a>
                  <a
                    class="iconContainer oauthbutton"
                    href="http://localhost/gateway/api/users/oauth2Redirect?provider=azure&action=signup&isNG=true"
                  >
                    <img
                      class="icon"
                      height="24"
                      src="test-file-stub"
                      width="24"
                    />
                    
                  </a>
                </div>
                <h2
                  class="lineMessage sectionWidth"
                >
                  <span
                    class="message"
                  >
                    OR
                  </span>
                </h2>
              </div>
            </div>
            <button
              class="oAuthbutton signupWithEmailButton"
            >
              <div
                class="buttonText"
              >
                Sign up with Email
              </div>
            </button>
          </div>
          <p
            class="agreement"
          >
            By signing up, you agree to our
            <a
              class="link"
              href="https://harness.io/privacy/"
              rel="noreferrer"
              target="_blank"
            >
              Privacy Policy
            </a>
            and our
            <a
              class="link"
              href="https://harness.io/subscriptionterms/"
              rel="noreferrer"
              target="_blank"
            >
              Terms of Use
            </a>
          </p>
        </div>
        <div
          class="footer"
        >
          Already have an account?
          <p
            class="signintext"
          >
            <a
              href="/signin"
            >
              Sign in
            </a>
          </p>
        </div>
        <img
          class="imagecd"
          src="test-file-stub"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SignUp telemetry 1`] = `
<div>
  <div
    class="layoutExperimental"
  >
    <div
      class="imageColumn"
      style="background: url(test-file-stub) repeat;"
    >
      <img
        alt=""
        aria-hidden="true"
        class="foreground"
        src="test-file-stub"
      />
      <div
        class="container"
      >
        <div>
          <div
            class="branding"
          >
            <img
              alt=""
              aria-hidden="true"
              src="test-file-stub"
            />
          </div>
          <div
            class="title"
          >
            Continuous Integration
          </div>
          <div
            class="tagline"
            style="color: rgb(43, 177, 242);"
          >
            Harness CI is an enterprise ready, cloud native CI product.
          </div>
          <div
            class="valueProp"
          >
            An intelligent, container-native CI solution with isolated builds and standardized extensions. Build artifacts smarter and faster.
          </div>
          <div
            class="hrmodule"
            style="background: rgb(43, 177, 242);"
          />
        </div>
        <div
          class="callout"
        >
          <p
            class="cotext"
          >
            TRUSTED BY THE NEW YORK TIMES, ROBLOX, JOHN DEERE, EBAY AND MANY OTHERS TO RUN THEIR BUILDS AND TEST SUITES BLAZING FAST
          </p>
          <img
            alt=""
            aria-hidden="true"
            src="test-file-stub"
          />
        </div>
      </div>
    </div>
    <div
      class="cardColumn"
    >
      <div
        class="card"
      >
        <div
          class="signup experimentSignup"
        >
          <div
            class="title"
          >
            Sign up
          </div>
          <div
            class="subtitle subtitleEmailForm"
          >
            Get started for free. No Credit card required.
          </div>
          <div
            class="layout-horizontal spacing-auto oAuthIcons oAuthForm allAuth emailFormMargin"
          >
            <a
              class="iconContainer oauthbutton"
              href="http://localhost/gateway/api/users/oauth2Redirect?provider=github&action=signup&isNG=true"
            >
              <img
                class="icon"
                height="24"
                src="test-file-stub"
                width="24"
              />
              
            </a>
            <a
              class="iconContainer oauthbutton"
              href="http://localhost/gateway/api/users/oauth2Redirect?provider=bitbucket&action=signup&isNG=true"
            >
              <img
                class="icon"
                height="24"
                src="test-file-stub"
                width="24"
              />
              
            </a>
            <a
              class="iconContainer oauthbutton"
              href="http://localhost/gateway/api/users/oauth2Redirect?provider=gitlab&action=signup&isNG=true"
            >
              <img
                class="icon"
                height="24"
                src="test-file-stub"
                width="24"
              />
              
            </a>
            <a
              class="iconContainer oauthbutton"
              href="http://localhost/gateway/api/users/oauth2Redirect?provider=linkedin&action=signup&isNG=true"
            >
              <img
                class="icon"
                height="24"
                src="test-file-stub"
                width="24"
              />
              
            </a>
            <a
              class="iconContainer oauthbutton"
              href="http://localhost/gateway/api/users/oauth2Redirect?provider=google&action=signup&isNG=true"
            >
              <img
                class="icon"
                height="24"
                src="test-file-stub"
                width="24"
              />
              
            </a>
            <a
              class="iconContainer oauthbutton"
              href="http://localhost/gateway/api/users/oauth2Redirect?provider=azure&action=signup&isNG=true"
            >
              <img
                class="icon"
                height="24"
                src="test-file-stub"
                width="24"
              />
              
            </a>
          </div>
          <form
            class="layout-vertical spacing-medium  credsFormInput"
          >
            <div
              class="layout-vertical spacing-small field"
            >
              <label>
                Email
              </label>
              <input
                class=""
                disabled=""
                id="email"
                name="email"
                placeholder="email@work.com"
                value="random@hotmail.com"
              />
            </div>
            <div
              class="layout-vertical spacing-small field"
            >
              <label>
                Password
              </label>
              <div
                class="pwd"
              >
                <input
                  class="pwdInput"
                  disabled=""
                  id="password"
                  name="password"
                  placeholder="Password"
                  type="password"
                  value="12345678"
                />
                <img
                  class="pwdIcon"
                  height="25"
                  src="test-file-stub"
                  width="25"
                />
              </div>
            </div>
            <div />
            <button
              class="oAuthbutton"
              disabled=""
              type="submit"
            >
              <div
                class="buttonText"
              >
                Sign up 
              </div>
            </button>
          </form>
          <p
            class="agreement"
          >
            By signing up, you agree to our
            <a
              class="link"
              href="https://harness.io/privacy/"
              rel="noreferrer"
              target="_blank"
            >
              Privacy Policy
            </a>
            and our
            <a
              class="link"
              href="https://harness.io/subscriptionterms/"
              rel="noreferrer"
              target="_blank"
            >
              Terms of Use
            </a>
          </p>
        </div>
        <div
          class="footer"
        >
          Already have an account?
          <p
            class="signintext"
          >
            <a
              href="/signin"
            >
              Sign in
            </a>
          </p>
        </div>
        <img
          class="imagecd"
          src="test-file-stub"
        />
      </div>
    </div>
  </div>
</div>
`;
